# Solar_sw

./: .env.example  .gitignore  README.md  pyproject.toml  sample_prices.csv
deploy/: aurinko-collect.service  aurinko-collect.timer  aurinko-optimo.service
docs/: GITHUB_JULKAISU.md  PALVELIN.md  PROJEKTISUUNNITELMA.md
src/aurinko_optimo/: __init__.py  api.py  collector.py  config.py  fronius.py  models.py  optimizer.py  prices.py  services.py  storage.py
tests/: test_optimizer.py
