[project]
name = "aurinko-optimo"
version = "0.1.0"
description = "Prototype for optimizing a home solar PV system with a Fronius inverter."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
]

[project.scripts]
aurinko-api = "aurinko_optimo.api:main"
aurinko-collect = "aurinko_optimo.collector:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
